--- a/index.html
+++ b/index.html
@@ -7,349 +7,282 @@
   <title>Gallery Athran</title>
   <link rel="shortcut icon" href="favicon.ico">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap-reboot.min.css" />
 
   <style>
-    html, body {
-      height: 100%;
-    }
-
     body {
-      display: flex;
-      align-items: center;
-      background: linear-gradient(0deg, slategrey 0%, lavender 100%);
-    }
-
-    section img {
-      width: 100%;
-      max-width: 480px;
-      border-radius: 4px;
-      box-shadow: 3px 3px 3px gray, -3px 3px 3px gray;
-    }
-
-    section div:has(> img) {
-      width: 100%;
-      display: flex;
-      justify-content: center;
+      background: linear-gradient(0deg, slategray 0%, lavender 100%);
     }
 
     main {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      gap: 1rem;
-      padding-inline: min(8rem, 4vw);
-      justify-content: center;
-      align-items: justify;
+      width: min(100%, 50rem);
+      margin: 0 auto;
+      padding: 16px;
     }
 
-    main>div {
-      font-size: large;
-      background-color: aliceblue;
-      padding: 0.8rem;
-      border-top: 1px solid white;
-      border-bottom: 1px solid black;
-      border-radius: 4px;
-      box-shadow: 3px 3px 3px gray, -3px 3px 3px gray;
-    }
-
-    /*  Small devices (landscape phones, 576px and up) */
-    @media (min-width: 576px) and (min-height: 576px) {
+    @media (min-width: 576px) {
       main {
-        gap: 1.5rem;
-      }
-
-      main>div {
-        font-size: larger;
-        padding: 1.5rem;
+        padding: 32px;
       }
     }
 
-    /* Medium devices (tablets, 768px and up) */
-    @media (min-width: 768px) and (min-height: 768px) {
-      main {
-        gap: 2rem;
-      }
-
-      main>div {
-        font-size: x-large;
-        padding: 2rem;
-      }
+    h1 {
+      text-align: center;
     }
 
-    /* Large devices (desktops, 992px and up) */
-    /* @media (min-width: 992px) { ... } */
-
-    /*  X-Large devices (large desktops, 1200px and up) */
-    /* @media (min-width: 1200px) { ... } */
-
-    main>div:not(.brick):hover {
-      cursor: pointer;
-      background-color: azure;
-      box-shadow: 5px 5px 3px gray, -5px 5px 3px gray;
-    }
-
-    div:has(> section) {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      overflow-y: auto;
-      pointer-events: none;
-    }
-
-    div:has(> section[data-open="jinjang"]) {
-      pointer-events: auto;
-    }
-
-    section {
-      margin: min(8vw, 97px) 49%;
-      background-color: beige;
-      border-style: solid;
-      border-image-slice: 194;
-      border-image-width: min(16vw, 194px);
-      border-image-outset: min(8vw, 97px);
-      border-image-repeat: round;
-      border-image-source: url(fractal-border-3.png);
-      display: none;
-      opacity: 0;
-      transition-property: margin-left margin-right;
-      transition-duration: 0.5s;
-      overflow-x: hidden;
-    }
-
-    section[data-open="jinjang"] {
-      opacity: 1;
-      margin-inline: min(194px, 8vw);
-    }
-
-    section>div {
-      width: max(68vw, 100% - 388px);
-      margin: min(4vw, 50px) auto;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-
-    section div:has(> pre) {
+    main>details {
+      margin-bottom: 16px;
       border: 1px solid gray;
       border-radius: 4px;
       background-color: white;
-      padding: 0.5rem;
+      padding: 16px;
+    }
+
+    main>details>summary {
+
+      list-style: none;
+    }
+
+    main>details>div {
+      padding-block: 16px;
+    }
+
+    main>details>summary>*:last-child {
+      position: relative;
+    }
+
+    main>details>summary>*:last-child::after {
+      content: 'more \25BC';
+      position: absolute;
+      right: 0;
+      bottom: -5px;
+    }
+
+    main>details[open]>summary>*:last-child::after {
+      content: 'less \25B2';
+      position: absolute;
+      right: 0;
+      bottom: -5px;
+    }
+
+    div:has(>img) {
+      margin-block: 16px;
+      display: flex;
+      justify-content: center;
+    }
+
+    div>img {
+      width: min(100%, 40rem);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     }
   </style>
 
 <body>
-
   <main>
-    <div id="kassy">Personal budgeting</div>
-    <div id="lexeme">Malay Lexeme synthesizer</div>
-    <div class="brick"></div>
-    <div id="snippets">Code snippets</div>
-    <div id="racket">Racket exercises</div>
-    <div class="brick"></div>
-    <div id="standalone-preact">Standalone Preact template</div>
-    <div id="express-preact">Express+Preact template</div>
-    <div class="brick"></div>
-    <div id="truss">Truss calculator</div>
-    <div id="scala-android">Scala android introduction (old)</div>
-    <div id="scala-android-lib">Scala android library (old)</div>
-    <!-- <div>Factorio mod: Bloodbelt</div> -->
-    <div class="brick">
-      <img src="/favicon.ico" width="20px" />
-    </div>
-    <div id="about-me">About me</div>
-  </main>
-  <div>
-    <section id="kassy-s">
-      <div>
+    <h1>My development journal</h1>
+    <hr>
+    <details>
+      <summary>
+        <h2>Daddy Kassy: Personal budgeting app</h2>
+        <p>
+          For tracking and analyzing simple personal income, expense, and investment. The target audience is an average
+          working adult.
+        </p>
         <div>
-          <h1 class="text-center">Daddy Kassy: Personal budgeting app</h1>
-          <p class="h5 text-center text-muted">
-            For tracking and analyzing simple personal
-            income,&nbsp;expense,&nbsp;and&nbsp;investment.<br />
-            The target audience is an average working adult.
-          </p>
-          <p class="text-center">
-            <a href="https://github.com/AliceCengal/daddy-kassy">Github</a>
-            &emsp;|&emsp;
-            <a href="https://alicecengal.github.io/daddy-kassy/">App</a>
-          </p>
+          <a href="https://github.com/AliceCengal/daddy-kassy">Github</a>
+          &emsp;|&emsp;
+          <a href="https://alicecengal.github.io/daddy-kassy/">App</a>
         </div>
+      </summary>
+
+      <div>
         <div>
           <img src="/images/alicecengal.github.io_daddy-kassy_.png" />
         </div>
-        <p>A standalone webapp, it requires no installation, just go the URL and
-          start using it immediately.
+        <p>A standalone webapp, it requires no installation, just go the URL and start using it immediately.
           <a href="https://alicecengal.github.io/daddy-kassy/">
             It is hosted on Github Pages.
           </a>
-          The first version of this app was written in VanillaJS + jQuery.
-          Then rewritten in React. Then rewritten in JSX-free Preact.
-          The charts are drawn by ChartJS.
+          The first version of this app was written in VanillaJS + jQuery. Then rewritten in React. Then rewritten in
+          Preact without JSX. The charts are drawn by ChartJS.
         </p>
-        <p>I previously tracked my budgets in an Excel spreadsheet. The Excel file
-          inevitably grew too big, so I remade it into a webapp. This webapp offers
-          a snappy interface to record your transactions, and provide some
-          chart visualizations for analysis.</p>
-        <p>The key differentiator is the addition of the Obligations&copy; table,
-          which I believe helps keep track some of the more complicated financial
-          structure that an average working adult has to deal with, those
-          pertaining to investments and loans.</p>
-        <button class="btn btn-primary">CLOSE</button>
+        <p>I previously tracked my budgets in an Excel spreadsheet. The Excel file inevitably grew too big, so I remade
+          it into a webapp. This webapp offers a snappy interface to record your transactions, and provide some chart
+          visualizations for analysis.</p>
+        <p>The key differentiator is the addition of the Obligations&copy; table, which I believe helps keep track some
+          of the more complicated financial structure that an average working adult has to deal with, those pertaining
+          to investments and loans.</p>
       </div>
-    </section>
+    </details>
 
-    <section id="snippets-s">
-      <div>
-        <h1>Random code snippets</h1>
-        <button class="btn btn-primary">CLOSE</button>
-      </div>
-    </section>
-
-    <section id="racket-s">
-      <div>
-        <h1>Racket exercises</h1>
-        <button class="btn btn-primary">CLOSE</button>
-      </div>
-    </section>
-
-    <section id="lexeme-s">
-      <div>
-        <h1>Malay lexeme synthesizer</h1>
-        <button class="btn btn-primary">CLOSE</button>
-      </div>
-    </section>
-
-    <section id="standalone-preact-s">
+    <details>
+      <summary>
+        <h2>UUID Base8192 Hangul encoding</h2>
+        <p>Visually compact UUID minification. Great for URL ids.</p>
+        <div>
+          <a href="https://github.com/AliceCengal/uuid-hangul">Github</a>
+          &emsp;|&emsp;
+          <a href="https://alicecengal.github.io/uuid-hangul/">App</a>
+        </div>
+      </summary>
       <div>
         <div>
-          <h1 class="text-center">Standalone Preact template</h1>
-          <p class="text-center">
-            <a href="https://github.com/AliceCengal/daddy-kassy">Github</a>
-            &emsp;|&emsp;
-            <a href="https://alicecengal.github.io/daddy-kassy/">App</a>
-          </p>
+          <img src="https://alicecengal.github.io/uuid-hangul/uuid_base_8192.PNG" />
+        </div>
+
+        <p>So you want to use UUID to uniquely identify a resource, which can be accessed over REST HTTP. Reasonable.
+          But UUID is really long, and using it in the URI makes for a clumsy-looking address bar. It is 128 bit of
+          information, and the standard representation is base16 hexadecimal plus 4 dashes, for a total of 36
+          characters.</p>
+
+        <p>Usually people shorten UUID by encoding it in base64 into a 22 character string. But I tHiNk iT lOoKs uGlY,
+          and 22 characters is still fairly long. To shorten it further, we need a MUCH bigger character set
+          (basically doubling the character set size for every encoded single character reduction), but base64 is
+          already pushing the limits of the latin alphabet as it is.</p>
+
+        <p>What if we look to the east? The character-based writing systems of east Asia makes for a large library of
+          ready-made and fairly well-supported unicode character set. There are several to choose from, but I chose
+          hangul for its uniformly squarish, clean, and modern look. Hangul has ~11,000 characters, of which I used
+          the first 8192 (2<sup>13</sup>) characters for a base8192 encoding of UUID in TEN characters.</p>
+
+        <div>
+          <div>30cca817-47c5-4f12-9391-700b5f81a321</div>
+          <div>MMyoF0fFTxKTkQAAcAtfgQ</div>
+          <p>꼌앐뇑쨪묒빲뇀놯쐚꼡</p>
+        </div>
+
+        <p>While in terms of character count, the base8192 hangul encoding is less than half of base64's 22 characters,
+          in terms of visual width it is only slightly shorter since each hangul character is rendered almost twice as
+          wide as most latin characters. Regardless, I personally think the hangul-encoded UUID presents as a clean and
+          compact URL section in the browser address bar, almost like a barcode</p>
+
+        <p>I apologize in advance to any Korean speakers who may experience discomfort as you instinctly try to read the
+          hangul</p>
+
+        <p>Can it go shorter? Chinese theoretically has enough characters to do base65536 (2<sup>16</sup>) encoding into
+          an 8-character string. But that scheme has several drawbacks, so I am content with just 8192.</p>
+      </div>
+    </details>
+
+    <details>
+      <summary>
+        <h2>Malay Lexeme synthesizer</h2>
+        <p>Word and text generator for Malayic languages. Can be used as Lorem Ipsum and to name stuff.</p>
+        <div>
+          <a href="https://github.com/AliceCengal/Neomalay-Lexeme-Synthesizer">Github</a>
+          &emsp;|&emsp;
+          <a href="https://alicecengal.github.io/Neomalay-Lexeme-Synthesizer/">App</a>
+        </div>
+      </summary>
+      <div>
+        <div>
+          <img src="/images/alicecengal.github.io_Neomalay-Lexeme-Synthesizer.png" />
         </div>
         <p>
-          Standalone Preact allows you to setup a small and simple interactive app very easily on any webpage.
-          The use case include when you want to host the app on free static hosts like Github Pages.
+          The phonology and syllabic structure of Malay lays down the base set of possible lexemes. Phonotactic rules
+          filter out non-conformant lexemes.
         </p>
-        <button class="btn btn-primary">CLOSE</button>
       </div>
-    </section>
-    <section id="express-preact-s">
-      <div>
-        <h1>Daddy Kassy: Personal budgeting app</h1>
-        <button class="btn btn-primary">CLOSE</button>
-      </div>
-    </section>
-    <section id="truss-s">
-      <div>
-        <h1>Daddy Kassy: Personal budgeting app</h1>
-        <button class="btn btn-primary">CLOSE</button>
-      </div>
-    </section>
-    <section id="scala-android-s">
+    </details>
+
+    <details>
+      <summary>
+        <h2>RPN calculator</h2>
+        <div>
+          <a href="https://github.com/AliceCengal/calculator">Github</a>
+          &emsp;|&emsp;
+          <a href="https://alicecengal.github.io/calculator/">App</a>
+        </div>
+      </summary>
       <div>
         <div>
-          <h1 class="text-center">Scala android introduction (OLD)</h1>
-          <p class="text-center"><i>this was written in 2014.</i></p>
-          <p class="text-center text-muted">
-            <a href="https://github.com/AliceCengal/android-scala-template-basic">
-              Github
-            </a>
-          </p>
+          <img src="/images/alicecengal.github.io_calculator.png" />
         </div>
-        <h6> src/com/marsupial/wallaby/MainActivity.scala</h6>
-        <div>
-          <pre>
-package com.marsupial.wallaby
-
-import android.app.Activity
-import android.os.Bundle
-
-class MainActivity extends Activity {
-
-  /**
-  * Called when the activity is first created.
-  */
-  override def onCreate(saved: Bundle) {
-    super.onCreate(saved)
-    setContentView(R.layout.main)
-  }
-
-}</pre>
-        </div>
-        <h6>pom.xml</h6>
-        <div>
-          <pre>
-&lt;dependencies>
-
-  &lt;dependency>
-      &lt;groupId>com.google.android&lt;/groupId>
-      &lt;artifactId>android&lt;/artifactId>
-      &lt;version>4.1.1.4&lt;/version>
-      &lt;scope>provided&lt;/scope>
-  &lt;/dependency>
-
-  &lt;dependency>
-      &lt;groupId>org.scala-lang&lt;/groupId>
-      &lt;artifactId>scala-library&lt;/artifactId>
-      &lt;version>${scala.version}&lt;/version>
-  &lt;/dependency>
-
-  &lt;!-- Add dependencies here -->
-
-&lt;/dependencies></pre>
-        </div>
-        <button class="btn btn-primary w-100">CLOSE</button>
+        <p>
+          Bootstrapped with the vite preact-ts template.
+        </p>
       </div>
-    </section>
-    <section id="scala-android-lib-s">
+    </details>
+
+    <details>
+      <summary>
+        <h2>React hook collection</h2>
+        <p>React devs collect hooks like bower birds collect colourful trash</p>
+      </summary>
       <div>
-        <h1>Scala android library (OLD)</h1>
-        <button class="btn btn-primary w-100">CLOSE</button>
+        <details>
+          <summary>useCascade - short-circuit the rendering pass, but be careful to not call another component's
+            setState.</summary>
+          <div>
+            <script src="https://gist.github.com/AliceCengal/cad6c0e31ed53f90acf726b596d2bae3.js"></script>
+          </div>
+        </details>
+
+        <details>
+          <summary>useEvent - this mostly of interest with regards to the typing. Better wait for the official hook.
+          </summary>
+          <div>
+            <script src="https://gist.github.com/AliceCengal/3a7923186424f8d2e679a4255ebc6c6e.js"></script>
+          </div>
+        </details>
+
+        <details>
+          <summary>useUpdate - to make a submit button gray out while the server call it fired off is pending.</summary>
+          <div>
+            <script src="https://gist.github.com/AliceCengal/cf3a508d02d8949b22c7985f72cda627.js"></script>
+          </div>
+        </details>
+
+        <details>
+          <summary>useDebounce - debounce a fast changing input.</summary>
+          <div>
+            <script src="https://gist.github.com/AliceCengal/2cf674f6f627cc9920c5064cbbe53bcd.js"></script>
+          </div>
+        </details>
+
+        <details>
+          <summary>useCircularIndex - for indexing into a rotating thing, like a carousel.</summary>
+          <div>
+            <script src="https://gist.github.com/AliceCengal/1dae33838e64d2e12e0e4bbd4c40b694.js"></script>
+          </div>
+        </details>
       </div>
-    </section>
-    <section id="about-me-s">
+    </details>
+
+    <details>
+      <summary>
+        <h2>Standalone Preact template</h2>
+        <p>Standalone Preact allows you to setup a small and simple interactive app very easily on any webpage.
+        </p>
+        <div>
+          <a href="https://github.com/AliceCengal/hello-preact-standalone">Github</a>
+          &emsp;|&emsp;
+          <a href="https://alicecengal.github.io/hello-preact-standalone/">App</a>
+        </div>
+      </summary>
       <div>
-        <h1>Athran Zuhail Abdul Rahman</h1>
-        <h3>Education</h3>
-        <dd>Maktab Rendah Sains MARA Pengkalan Chepa</dd>
-        <button class="btn btn-primary">CLOSE</button>
+        The use case include when you want to host the app on free static hosts like Github Pages.
       </div>
-    </section>
-  </div>
-  <script type="module">
-    const $ = (id) => document.getElementById(id)
-    const qsa = (d, s) => d.querySelectorAll(s)
+    </details>
 
-    qsa(document, "main > div:not(.brick)").forEach(({ id }) => {
-      // console.log(e.id)
-      $(id).addEventListener("click", e => {
+    <template>
+      <details>
+        <summary>
+          <h2>Title</h2>
+          <p>blurb</p>
+          <div>
+            <a href="https://github.com/AliceCengal/uuid-hangul">Github</a>
+            &emsp;|&emsp;
+            <a href="https://alicecengal.github.io/uuid-hangul/">App</a>
+          </div>
+        </summary>
+        <div>
+          details
+        </div>
+      </details>
+    </template>
+  </main>
 
-        $(id + "-s").style.display = "block"
-        setTimeout(
-          () => $(id + "-s").dataset.open = "jinjang",
-          100
-        )
-
-      })
-      qsa($(id + "-s"), "button")[0].addEventListener("click", e => {
-
-        $(id + "-s").dataset.open = ""
-        setTimeout(
-          () => $(id + "-s").style.display = "none",
-          1000
-        )
-
-      })
-    })
-
-  </script>
 </body>
 
 </html>
