add palette designer project

--- a/index.html
+++ b/index.html
@@ -208,6 +208,27 @@
       </div>
     </details>
 
+
+    <details>
+      <summary>
+        <h2>Color palette designer</h2>
+        <p>Generate a range of common colors to design with. outputs css variables.</p>
+        <div>
+          <a href="https://github.com/AliceCengal/palette-designer">Github</a>
+          &emsp;|&emsp;
+          <a href="https://alicecengal.github.io/palette-designer/">App</a>
+        </div>
+      </summary>
+      <div>
+        <div>
+          <img src="/images/palette_designer.PNG" />
+        </div>
+        <p>
+          Written in standalone Preact, no JSX, just function calls.
+        </p>
+      </div>
+    </details>
+
     <details>
       <summary>
         <h2>RPN calculator</h2>
