--- a/index.html
+++ b/index.html
@@ -208,6 +208,17 @@
       </div>
     </details>
 
+    <details>
+      <summary>
+        <h2>Design system showcase</h2>
+        <p>A basic design system based on two colors and a range of transparent shades.</p>
+        <div>
+          <a href="https://github.com/AliceCengal/design-system">Github</a>
+          &emsp;|&emsp;
+          <a href="https://alicecengal.github.io/design-system/">App</a>
+        </div>
+      </summary>
+    </details>
 
     <details>
       <summary>
