Add design system app to the gallery

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
       <div>
         <div>
-          <img src="/images/alicecengal.github.io_daddy-kassy_.png" />
+          <img src="/images/alicecengal.github.io_daddy-kassy_.png" alt="Screenshot of the personal budgeting app." />
         </div>
         <p>A standalone webapp, it requires no installation, just go the URL and start using it immediately.
           <a href="https://alicecengal.github.io/daddy-kassy/">
@@ -150,7 +150,8 @@
       </summary>
       <div>
         <div>
-          <img src="https://alicecengal.github.io/uuid-hangul/uuid_base_8192.PNG" />
+          <img src="https://alicecengal.github.io/uuid-hangul/uuid_base_8192.PNG"
+            alt="Screenshot of the Hangul UUID app." />
         </div>
 
         <p>So you want to use UUID to uniquely identify a resource, which can be accessed over REST HTTP. Reasonable.
@@ -199,7 +200,8 @@
       </summary>
       <div>
         <div>
-          <img src="/images/alicecengal.github.io_Neomalay-Lexeme-Synthesizer.png" />
+          <img src="/images/alicecengal.github.io_Neomalay-Lexeme-Synthesizer.png"
+            alt="Screenshot of the language synthesize app." />
         </div>
         <p>
           The phonology and syllabic structure of Malay lays down the base set of possible lexemes. Phonotactic rules
@@ -218,6 +220,12 @@
           <a href="https://alicecengal.github.io/design-system/">App</a>
         </div>
       </summary>
+      <div>
+        <div>
+          <img src="/images/palette_designer.PNG"
+            alt="Screenshot of the design system showcase showing the forms page." />
+        </div>
+      </div>
     </details>
 
     <details>
@@ -232,7 +240,7 @@
       </summary>
       <div>
         <div>
-          <img src="/images/palette_designer.PNG" />
+          <img src="/images/palette_designer.PNG" alt="Screenshot of the palette designer app." />
         </div>
         <p>
           Written in standalone Preact, no JSX, just function calls.
@@ -251,7 +259,7 @@
       </summary>
       <div>
         <div>
-          <img src="/images/alicecengal.github.io_calculator.png" />
+          <img src="/images/alicecengal.github.io_calculator.png" alt="Screenshot of the calculator app." />
         </div>
         <p>
           Bootstrapped with the vite preact-ts template.
