--- a/index.html
+++ b/index.html
@@ -222,8 +222,7 @@
       </summary>
       <div>
         <div>
-          <img src="/images/palette_designer.PNG"
-            alt="Screenshot of the design system showcase showing the forms page." />
+          <img src="/images/design-system.png" alt="Screenshot of the design system showcase showing the forms page." />
         </div>
       </div>
     </details>
@@ -240,7 +239,7 @@
       </summary>
       <div>
         <div>
-          <img src="/images/palette_designer.PNG" alt="Screenshot of the palette designer app." />
+          <img src="/images/palette_designer.png" alt="Screenshot of the palette designer app." />
         </div>
         <p>
           Written in standalone Preact, no JSX, just function calls.
@@ -290,7 +289,7 @@
         </details>
 
         <details>
-          <summary>useUpdate - to make a submit button gray out while the server call it fired off is pending.</summary>
+          <summary>useUpdate - to make a submit button gray out while the async call it fired off is pending.</summary>
           <div>
             <script src="https://gist.github.com/AliceCengal/cf3a508d02d8949b22c7985f72cda627.js"></script>
           </div>
