fix image filename

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       </summary>
       <div>
         <div>
-          <img src="/images/design-system.png" alt="Screenshot of the design system showcase showing the forms page." />
+          <img src="/images/design-system.PNG" alt="Screenshot of the design system showcase showing the forms page." />
         </div>
       </div>
     </details>
@@ -239,7 +239,7 @@
       </summary>
       <div>
         <div>
-          <img src="/images/palette_designer.png" alt="Screenshot of the palette designer app." />
+          <img src="/images/palette_designer.PNG" alt="Screenshot of the palette designer app." />
         </div>
         <p>
           Written in standalone Preact, no JSX, just function calls.
