add entry for progression synth

--- a/index.html
+++ b/index.html
@@ -201,11 +201,32 @@
       <div>
         <div>
           <img src="/images/alicecengal.github.io_Neomalay-Lexeme-Synthesizer.png"
-            alt="Screenshot of the language synthesize app." />
+            alt="Screenshot of the language synthesizer app." />
         </div>
         <p>
           The phonology and syllabic structure of Malay lays down the base set of possible lexemes. Phonotactic rules
           filter out non-conformant lexemes.
+        </p>
+      </div>
+    </details>
+
+    <details>
+      <summary>
+        <h2>Chord progression synthesizer</h2>
+        <p>Synthesize a chord progression based on some basic harmony rules</p>
+        <div>
+          <a href="https://github.com/AliceCengal/progression-synthesis">Github</a>
+          &emsp;|&emsp;
+          <a href="https://alicecengal.github.io/progression-synthesis/">App</a>
+        </div>
+      </summary>
+      <div>
+        <div>
+          <img src="/images/progression-synth.png" alt="Screenshot of the chord progression synthesizer app." />
+        </div>
+        <p>
+          Generate a random seed of SATB chord, then filter based on jump size, line crossing, chord harmony, and key
+          harmony
         </p>
       </div>
     </details>
