add new project

--- a/index.html
+++ b/index.html
@@ -6,30 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gallery Athran</title>
   <link rel="shortcut icon" href="favicon.ico">
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap-reboot.min.css" />
-
+  <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      background: linear-gradient(0deg, slategray 0%, lavender 100%);
-    }
-
-    main {
-      width: min(100%, 50rem);
-      margin: 0 auto;
-      padding: 16px;
-    }
-
-    @media (min-width: 576px) {
-      main {
-        padding: 32px;
-      }
-    }
-
-    h1 {
-      text-align: center;
-    }
-
     .contact-me {
       display: flex;
       align-items: center;
@@ -104,6 +83,27 @@
       <a href="https://github.com/AliceCengal">Github</a>
     </div>
     <hr>
+
+    <details>
+      <summary>
+        <h2>Forsp editor and interpreter web app</h2>
+        <p>
+          Edit and execute your Forsp scripts right in the browser.
+        </p>
+        <div>
+          <a href="https://github.com/AliceCengal/forsp-web">Github</a>
+          &emsp;|&emsp;
+          <a href="https://alicecengal.github.io/forsp-web/">App</a>
+        </div>
+      </summary>
+
+      <div>
+        <div>
+          <img src="/images/forsp-web.png" alt="Screenshot of the Forsp web app." />
+        </div>
+      </div>
+    </details>
+
     <details>
       <summary>
         <h2>Daddy Kassy: Personal budgeting app</h2>
