--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
       <div>
         <div>
-          <img src="/images/forsp-web.png" alt="Screenshot of the Forsp web app." />
+          <img src="/images/forsp-web.PNG" alt="Screenshot of the Forsp web app." />
         </div>
       </div>
     </details>
