--- a/index.html
+++ b/index.html
@@ -86,6 +86,26 @@
 
     <details>
       <summary>
+        <h2>Rejang script writer</h2>
+        <p>
+          A helper for composing a text in the Rejang script.
+        </p>
+        <div>
+          <a href="https://github.com/AliceCengal/rejang-script-writer">Github</a>
+          &emsp;|&emsp;
+          <a href="https://alicecengal.github.io/rejang-script-writer/">App</a>
+        </div>
+      </summary>
+
+      <div>
+        <div>
+          <img src="/images/rejang.PNG" alt="Screenshot of the Rejang script web app." />
+        </div>
+      </div>
+    </details>
+
+    <details>
+      <summary>
         <h2>Forsp editor and interpreter web app</h2>
         <p>
           Edit and execute your Forsp scripts right in the browser.
